# queryapi

./:   postgres.Dockerfile  .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  firecracker.md  postgres.Dockerfile  prometheus.yml  render.yaml  rust-toolchain.toml
.github/: CODEOWNERS
actions-alertexer/: Cargo.toml
aggregation-queue-handler/: Cargo.toml  README.md  test_payload.json
aggregation-queue-handler/src/: main.rs
alert-rules/: Cargo.toml  schema.sql  sqlx-data.json
alert-rules/src/: lib.rs  numeric.rs
alertexer/: Cargo.toml  README.md
alertexer-types/: Cargo.toml
alertexer/src/: cache.rs  indexer_registry.rs  main.rs  utils.rs
alertexer/src/checkers/: mod.rs  outcomes.rs
alertexer/src/matchers/: actions.rs  events.rs  mod.rs
alertexer/src/outcomes_reducer/: matcher.rs  mod.rs
alertexer/src/state_changes_reducer/: matcher.rs  mod.rs
bitmap-indexer/: .eslintrc.js  bitCompression.test.js  bitmap.js  framework.test.ts  helpers.js  jest.config.js  output.csv  package-lock.json  package.json  real_test.js  tsconfig.build.json  tsconfig.json
block-server/: handler.js  serverless.yml
block-streamer/: Cargo.toml  Dockerfile  README.md  build.rs  schema.json
block-streamer/data/000093085141/: block.json  shard_0.json  shard_1.json  shard_2.json  shard_3.json
block-streamer/data/000107503704/: block.json  list_objects.xml  shard_0.json  shard_1.json  shard_2.json  shard_3.json
block-streamer/data/000107503705/: block.json  list_objects.xml  shard_0.json  shard_1.json  shard_2.json  shard_3.json
block-streamer/data/invalid/: list_objects.xml
block-streamer/examples/: get_bitmaps.rs  graphql.rs  list_streams.rs  query_databricks.rs  start_stream.rs  stop_stream.rs
block-streamer/graphql/bitmap/: query.graphql  schema.json
block-streamer/graphql/darunrs_near/: get_bitmaps.graphql  get_bitmaps.rs  get_bitmaps_exact.graphql  get_bitmaps_wildcard.graphql  schema.graphql
block-streamer/graphql/dataplatform_near/: get_bitmaps_exact.graphql  get_bitmaps_wildcard.graphql  schema.graphql
block-streamer/proto/: block_streamer.proto
block-streamer/src/: bitmap.rs  bitmap_processor.rs  block_height_stream.rs  block_stream.rs  block_streamer.rs  client.rs  data.rs  delta_lake_client.rs  graphql.rs  historical_block_processing.rs  indexer_config.rs  indexer_types.rs  lake_s3_client.rs  lib.rs  main.rs  metrics.rs  redis.rs  s3.rs  s3_client.rs  server.rs  test_utils.rs  utils.rs
block-streamer/src/graphql/: client.rs  get_bitmap_by_date.rs  mod.rs
block-streamer/src/graphql/queries/: get_bitmaps_exact.rs  get_bitmaps_wildcard.rs  mod.rs
block-streamer/src/graphql_queries/: get_bitmaps_exact.rs  mod.rs
block-streamer/src/receiver_blocks/: bitmap.rs  mod.rs  receiver_blocks_processor.rs
block-streamer/src/rules/: matcher.rs  mod.rs  outcomes_reducer.rs  types.rs
block-streamer/src/rules/types/: events.rs  indexer_rule_match.rs
block-streamer/src/server/: block_streamer_service.rs  mod.rs  route_guide_service.rs
coordinator/: Cargo.toml  Dockerfile  build.rs
coordinator/proto/: indexer_manager.proto
coordinator/src/: block_stream_handler.rs  block_streams_handler.rs  executors_handler.rs  indexer_config.rs  indexer_manager.rs  indexer_state.rs  lifecycle.rs  main.rs  migrate.rs  migration.rs  redis.rs  registry.json  registry.rs  synchroniser.rs  utils.rs
coordinator/src/block_streams/: handler.rs  mod.rs  synchronise.rs
coordinator/src/executors/: handler.rs  mod.rs  synchronise.rs
coordinator/src/handlers/: block_streams.rs  data_layer.rs  executors.rs  mod.rs
coordinator/src/server/: indexer_manager_service.rs  mod.rs
coordinator/src/synchronise/: block_streams.rs  executors.rs  mod.rs
core-indexers/: .eslintrc.js  jest.config.js  package-lock.json  package.json  tsconfig.json
docs/: ALERTEXER_INDEXER_CONCEPT.md  QUEUE_HANDLER_CONCEPT.md  README.md  WRITING_QUEUE_HANDLER.md
email-queue-handler/: Cargo.toml  README.md
email-queue-handler/src/: main.rs
frontend/: .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc.js  Dockerfile  README.md  babel.config.js  babel.config.test.js  jest.config.js  next.config.js  package-lock (1).json  package-lock.json  package.json  primitives.d.ts  replacement.dev.json  replacement.local.json  tsconfig.json  (+2 more)
hasura-authentication-service/: Cargo.toml  Dockerfile
hasura-authentication-service/src/: main.rs  services.rs
indexer/alertexer-types/: Cargo.toml
indexer/alertexer-types/src/: indexer_types.rs  lib.rs  primitives.rs
indexer/queryapi_coordinator/: Cargo.toml  README.md  build.rs
indexer/queryapi_coordinator/src/: cache.rs  historical_block_processing.rs  historical_block_processing_integration_tests.rs  indexer_reducer.rs  indexer_registry.rs  indexer_types.rs  main.rs  metrics.rs  opts.rs  queue.rs  runner_client.rs  s3.rs  utils.rs
indexer/queryapi_coordinator/src/outcomes_reducer/: indexer_reducer.rs
indexer/queryapi_coordinator/src/state_changes_reducer/: matcher.rs
indexer/shared/: Cargo.toml
indexer/shared/src/: lib.rs
indexer_rule_type/: Cargo.toml
indexer_rules_engine/: Cargo.toml
indexer_rules_engine/src/: lib.rs  matcher.rs  outcomes_reducer.rs  types.rs
indexer_rules_engine/src/types/: indexer_rule.rs  indexer_rule_match.rs  mod.rs
queue-handler/: .env  Cargo.toml  README.md  sqlx-data.json  test_payload.json
queue-handler-alertexer/: Cargo.toml  sqlx-data.json  test_payload_agg.json
queue-handler-alertexer/src/: main.rs
queue-handler/src/: main.rs
receipt-account-party-alertexer/: Cargo.toml
receipt-account-party-alertexer/src/: checker.rs  main.rs
registry/contract/: Cargo.toml  README.md  build.sh  deploy-dev.sh  deploy-local-testing.sh  deploy-prod.sh
registry/contract/src/: lib.rs
registry/types/: Cargo.toml
registry/types/src/: lib.rs
shared/: Cargo.toml  README.md
shared/src/: lib.rs
shared/src/types/: events.rs  mod.rs  primitives.rs
tx-alertexer/: Cargo.toml
tx-alertexer/src/: checker.rs  main.rs  storage.rs  storage_ext.rs
tx-alertexer/src/types/: mod.rs
(+558 files in other folders)
