[package]
name = "alert-rules"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "json", "chrono", "macros", "offline" ] }

[features]
db = []
