[package]
name = "alert-rules"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.10.2"
chrono = "0.4.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "postgres", "json", "chrono", "macros", "offline" ], optional = true }

[features]
db = ["dep:sqlx"]
