[package]
name = "alertexer"
version = "0.1.0"
edition = "2021"
authors = ["Near Inc <hello@nearprotocol.com>"]

[dependencies]
anyhow = "1.0.57"
borsh = "0.9.3"
futures = "0.3.5"
itertools = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
tokio = { version = "1.1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.34"

alert-rules = { path = '../alert-rules', features = ["db"] }
shared = { path = '../shared' }
storage = { path = '../storage' }
wildmatch = "2.1.1"

near-lake-framework = "0.5.0"
