[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
tokio = "1.28"
tonic = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0.108"

block-streamer = { path = "../block-streamer" }
registry-types = { path = "../registry/types", features = ["near-primitives"] }

near-jsonrpc-client = "0.6.0"
near-primitives = "0.17.0"
near-jsonrpc-primitives = "0.17.0"

[dev-dependencies]
mockall = "0.11.4"
