[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
futures-util = "0.3.30"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
tokio = "1.28"
tonic = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = "1.0.195"
serde_json = "1.0.108"

block-streamer = { path = "../block-streamer" }
runner = { path = "../runner-client"}
registry-types = { path = "../registry/types" }

near-jsonrpc-client = "0.8.0"
near-primitives = "0.20.0"
near-jsonrpc-primitives = "0.20.0"

[dev-dependencies]
mockall = "0.11.4"
