[package]
name = "hasura-authentication-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
actix-web-lab = "0.10"
actix-cors = "0.6"
async-graphql = "5.0.5"
async-graphql-actix-web = "5.0.5"

dotenv = "0.15.0"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres"] }

juniper = "0.15"

env_logger = "0.9"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
