[package]
name = "indexer_rule_type"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { version = "0.10.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

near-sdk = { version = "5.0.0-alpha.1", optional = true }

[features]
default = ["borsh", "serde"]
nearsdk = ["near-sdk"]
