[package]
name = "indexer_rules_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
borsh = "0.10.2"
futures = "0.3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
wildmatch = "2.1.1"

near-lake-framework = "0.7.1"

# temp for RedisConnectionManager type, pending further refactor of transaction cache
redis = { version = "0.21.5", features = ["tokio-comp", "connection-manager"] }

