[package]
name = "queue-handler-alertexer"
version = "0.1.0"
edition = "2021"


# Use cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to manage dependencies.
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.
[workspace]

[dependencies]
aws-config = "0.13.0"
aws_lambda_events = { version = "0.6.1", default-features = false, features = ["sqs"] }
aws-sdk-sqs = "0.13.0"
base64 = "0.13.0"
borsh = "0.9.3"
futures = "0.3.5"
lambda_runtime = "0.5.1"
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0.55"
thiserror = "1.0.31"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "json", "chrono", "macros", "offline" ] }
tokio = { version = "1", features = ["macros", "sync", "parking_lot"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

alertexer-types = { path = "../alertexer-types" }

[package.metadata.lambda.env]
DATABASE_URL="postgres://alerts:YOUR_PASSWORD@localhost/alerts"
AWS_ACCESS_KEY_ID="local lambda Access Key"
AWS_SECRET_ACCESS_KEY="local lambda secret key"
AGGREGATION_QUEUE_URL="https://sqs.eu-central-1.amazonaws.com/754641474505/gabe-alertexer-aggregations"
