[package]
name = "queue-handler-alertexer"
version = "0.1.0"
edition = "2021"


# Use cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to manage dependencies.
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.
[workspace]

[dependencies]
aws_lambda_events = { version = "0.6.1", default-features = false, features = ["sqs"] }
base64 = "0.13.0"
borsh = "0.9.3"
futures = "0.3.5"
lambda_runtime = "0.5.1"
minreq = { version = "2.6.0", features = ["https", "json-using-serde"] }
serde_json = "1.0.55"
thiserror = "1.0.31"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

shared = { path = "../shared" }
