[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
aws-types = "0.13.0"
aws-sdk-s3 = "0.13.0"
aws-sdk-sqs = "0.13.0"
base64 = "0.13.0"
borsh = "0.9.3"
clap = { version = "3.1.6", features = ["derive", "env"] }
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
tracing = "0.1.34"
tracing-subscriber = "0.2.4"

near-lake-framework = "0.5.0"

storage = { path = "../storage" }
