[package]
name = "tx-alertexer"
version = "0.1.0"
edition = "2021"
authors = ["Near Inc <hello@nearprotocol.com>"]
rust-version = "1.60.0"

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.6", features = ["derive"] }
futures = "0.3.5"
itertools = "0.9.0"
redis = { version = "0.21.5", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
thiserror = "1.0"
tokio = { version = "1.1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.34"
tracing-subscriber = "0.2.4"


alert-rules = { path = '../alert-rules' }
shared = { path = '../shared' }
queue-sender = { path = '../queue-sender' }

near-lake-framework = "0.4.0"
