[package]
name = "alertexer-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
borsh = "0.10.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
near-lake-framework = "0.7.1"
