[package]
name = "queryapi_coordinator"
version = "0.1.0"
edition = "2021"
authors = ["Near Inc <hello@nearprotocol.com>"]

[dependencies]
anyhow = "1.0.57"
actix-web = "=4.0.1"
borsh = "0.10.2"
cached = "0.23.0"
futures = "0.3.5"
itertools = "0.9.0"
lazy_static = "^1.4"
prometheus = "0.13.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
tokio = { version = "1.1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.34"

alert-rules = { path = '../alert-rules', features = ["db"] }
shared = { path = '../shared' }
storage = { path = '../storage' }
wildmatch = "2.1.1"

near-jsonrpc-client = "0.5.1"
near-jsonrpc-primitives = "0.16.0"
near-lake-framework = "0.7.1"
mockall = "0.9.1"
