[package]
name = "queryapi_coordinator"
version = "0.1.0"
edition = "2021"
authors = ["Near Inc <hello@nearprotocol.com>"]

[dependencies]
anyhow = "1.0.57"
actix-web = "=4.0.1"
borsh = "0.10.2"
cached = "0.23.0"
chrono = "0.4.25"
futures = "0.3.5"
itertools = "0.9.0"
lazy_static = "^1.4"
prometheus = "0.13.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
tokio = { version = "1.1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-util = "0.6.7"
tokio-stream = { version = "0.1" }
tracing = "0.1.34"

storage = { path = '../storage' }
indexer_rule_type = { path = '../indexer_rule_type' }
indexer_rules_engine = { path = '../indexer_rules_engine' }

near-jsonrpc-client = "0.5.1"
near-jsonrpc-primitives = "0.16.0"
near-lake-framework = "0.7.1"
mockall = "0.9.1"
regex = "1"

# opts
base64 = "0.13.0"
clap = { version = "3.1.6", features = ["derive", "env"] }
dotenv = "0.15.0"
tracing-subscriber = "0.2.4"
unescape = "0.1.0"

# aws
aws-types = "0.53.0"
aws-credential-types = "0.53.0"
aws-sdk-s3 = "0.23.0"
