[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
aws-types = "0.53.0"
aws-credential-types = "0.53.0"
aws-sdk-s3 = "0.23.0"
aws-sdk-sqs = "0.23.0"
base64 = "0.13.0"
borsh = "0.10.2"
clap = { version = "3.1.6", features = ["derive", "env"] }
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
tracing = "0.1.34"
tracing-subscriber = "0.2.4"

near-jsonrpc-client = "0.5.1"
near-lake-framework = "0.7.1"

alertexer-types = { path = "../alertexer-types" }
storage = { path = "../storage" }
