[package]
name = "registry"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
borsh = "1.0.0"
near-sdk = "5.0.0-alpha.1"
uint = { version = "0.9.3", default-features = false }
registry-types = { path = "../types", features = ["nearsdk"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
